--- a/src/page/Cart/style.scss
+++ b/src/page/Cart/style.scss
@@ -1,67 +1,72 @@
+.cartWrap {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.boxControl {
+  width: 1200px;
+  padding-top: 100px;
+  color: #e5e5e5;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  .box-all-select {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 30px;
+    background-color: #66666666;
+    border: 1px solid #666666;
+    margin-right: 20px;
+
+    input[type='checkbox'] {
+      width: 15px;
+      height: 15px;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+    p {
+      color: #e5e5e5;
+      font-size: 16px;
+      font-weight: 600;
+      margin: 0;
+    }
+  }
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #66666666;
+    border: 1px solid #666666;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+    svg {
+      width: 20px;
+      height: 20px;
+      color: #b63b3b;
+      margin-right: 5px;
+    }
+    p {
+      color: #e5e5e5;
+      font-size: 16px;
+      font-weight: 600;
+      margin: 0;
+    }
+  }
+}
+
 .cart {
   width: 1200px;
-  height: 100%;
-  padding-top: 80px;
-  margin: auto;
+  padding-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   overflow-y: auto;
-
-  .boxControl {
-    width: 100%;
-    color: #e5e5e5;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    background-color: 1px solid #66666666;
-    .box-all-select {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100px;
-      height: 30px;
-      background-color: #66666666;
-      border: 1px solid #666666;
-      margin-right: 20px;
-
-      input[type='checkbox'] {
-        width: 15px;
-        height: 15px;
-        cursor: pointer;
-        margin-right: 10px;
-      }
-      p {
-        color: #e5e5e5;
-        font-size: 16px;
-        font-weight: 600;
-        margin: 0;
-      }
-    }
-    button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #66666666;
-      border: 1px solid #666666;
-      width: 100px;
-      height: 30px;
-      cursor: pointer;
-      svg {
-        width: 20px;
-        height: 20px;
-        color: #b63b3b;
-        margin-right: 5px;
-      }
-      p {
-        color: #e5e5e5;
-        font-size: 16px;
-        font-weight: 600;
-        margin: 0;
-      }
-    }
-  }
 
   .cartItemList {
     background-color: #131313;
@@ -271,10 +276,11 @@
 
 .totalPrice {
   width: 100%;
-  height: 200px;
+  height: 100px;
   display: flex;
   color: #e5e5e5;
   font-weight: 700;
+  margin-bottom: 200px;
   & > div {
     display: flex;
     justify-content: space-around;
