--- a/src/page/PickList/style.scss
+++ b/src/page/PickList/style.scss
@@ -1,6 +1,6 @@
 .pickList {
   width: 1200px;
-  padding-top: 80px;
+  padding: 80px 80px 0px 80px;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -25,6 +25,7 @@
       margin: 0;
       white-space: nowrap;
       font-size: 0.8rem;
+      font-weight: 700;
     }
 
     & img {
