--- a/src/components/ModalCartAlert/style.scss
+++ b/src/components/ModalCartAlert/style.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 348px;
   left: 565px;
-  background-color: rgb(54, 173, 96);
+  background-color: #7beca4;
   border-radius: 10px;
   width: 220px;
   height: 40px;
@@ -19,6 +19,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    svg {
+      width: 25px;
+      height: 25px;
+      color: #0eb84b;
+    }
     div {
       width: 20px;
       margin-right: 6px;
@@ -26,6 +31,7 @@
       align-items: center;
     }
     h2 {
+      color: #0a0a0a;
       font-size: 14px;
       font-weight: 700;
     }
