--- a/src/components/ModalCartAlert/style.scss
+++ b/src/components/ModalCartAlert/style.scss
@@ -31,7 +31,7 @@
       align-items: center;
     }
     h2 {
-      color: #0a0a0a;
+      color: #484848;
       font-size: 14px;
       font-weight: 700;
     }
