--- a/src/page/Cart/style.scss
+++ b/src/page/Cart/style.scss
@@ -213,7 +213,12 @@
     justify-content: center;
     align-items: center;
   }
-  span {
+  span:nth-child(2) {
+    color: #3ce21e;
+    font-size: 20px;
+    font-weight: 700;
+  }
+  span:nth-child(3) {
     margin-left: 5px;
     font-size: 20px;
     font-weight: 700;
