--- a/src/components/ui/MenuBar/style.scss
+++ b/src/components/ui/MenuBar/style.scss
@@ -15,6 +15,28 @@
   }
 }
 
+.search {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 700px;
+  input {
+    border: 1px solid #e5e5e5;
+    color: #e5e5e5;
+    padding: 0px 0px 0px 8px;
+    background-color: rgb(20, 20, 20);
+    width: 500px;
+    height: 30px;
+    outline: none;
+  }
+  svg {
+    margin-right: 10px;
+    color: #e5e5e5;
+    width: 30px;
+    height: 30px;
+  }
+}
+
 .menuBar__logo {
   display: flex;
   justify-items: center;
