--- a/src/components/ui/MenuBar/style.scss
+++ b/src/components/ui/MenuBar/style.scss
@@ -15,11 +15,16 @@
   }
 }
 
+form {
+  display: flex;
+  align-items: center;
+}
 .search {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 700px;
+
   input {
     border: 0.5px solid #e5e5e5;
     color: #e5e5e5;
