--- a/src/components/SearchItems/style.scss
+++ b/src/components/SearchItems/style.scss
@@ -1,7 +1,15 @@
+.searchItemContainer {
+  position: fixed;
+  padding-top: 20px;
+  height: 50%;
+  width: 100%;
+  // background-color: blue;
+  background-color: #101010;
+}
+
 .searchItems {
   width: 1200px;
   padding: 80px 80px 0px 80px;
-  background-color: red;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -14,7 +22,7 @@
     align-items: center;
     list-style: none;
     cursor: pointer;
-    width: 100%;
+    width: 100px;
     height: 100%;
     text-align: center;
     .pickListInfo {
