--- a/src/components/SearchItems/style.scss
+++ b/src/components/SearchItems/style.scss
@@ -7,12 +7,31 @@
   border-bottom: 0.1px solid #e5e5e5;
   background-color: #080808;
   padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.searchClose {
+  width: 40px;
+  height: 100%;
+  background-color: #08080800;
+  border: 0;
+  cursor: pointer;
+  padding-top: 75px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  svg {
+    width: 40px;
+    height: 40px;
+    color: #e5e5e5;
+  }
+}
 .searchItems {
   width: 1200px;
   padding: 80px 80px 0px 80px;
-  margin: auto;
+  margin-top: auto;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(auto, 1fr);
