--- a/src/page/SignUp/style.scss
+++ b/src/page/SignUp/style.scss
@@ -47,8 +47,10 @@
     }
 
     & div {
-      width: 100%;
+      width: 300px;
       height: 150px;
+      display: flex;
+      align-items: center;
       a {
         text-decoration: none;
         .signInBtn {
@@ -64,7 +66,7 @@
           border-style: none;
         }
         .homeBtn {
-          width: 100%;
+          width: 300px;
           height: 40px;
           margin-top: 10px;
           border-radius: 4px;
@@ -163,14 +165,14 @@
       flex-direction: column;
       margin: 20px 0px;
       & p {
-        opacity: 0;
+        // opacity: 0;
         padding-top: 5px;
         font-size: 12px;
         color: #ff3636;
       }
-      & p.errorMessage {
-        opacity: 1;
-      }
+      // & p.errorMessage {
+      //   opacity: 1;
+      // }
     }
     & button {
       width: 100%;
