--- a/src/page/MovieDetail/style.scss
+++ b/src/page/MovieDetail/style.scss
@@ -30,6 +30,7 @@
 .detail__wrap {
   display: flex;
   justify-content: center;
+  position: relative;
   width: 1250px;
   & .detail__poster {
     width: 250px;
@@ -42,17 +43,18 @@
   }
 
   & .detail__info {
-    width: 50%;
+    width: 600px;
     margin-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
     & h1 {
       color: #e5e5e5;
     }
     .modalCartAlert {
-      left: 930px;
-      top: 390px;
+      left: 420px;
+      top: 280px;
     }
   }
   & .detail__subInfo {
